Downbump to JDK8